--- a/letgo/package.json
+++ b/letgo/package.json
@@ -9,10 +9,14 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "loadash": "^1.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.4",
+    "reactstrap": "^9.1.4",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
